--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.49.2",
+    "@tanstack/react-query-devtools": "^5.49.2",
+    "axios": "^1.7.2",
     "next": "14.2.4",
     "nextjs-toploader": "^1.6.12",
     "react": "^18",
