--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "daisyui": "^4.12.10",
     "next": "14.2.4",
     "nextjs-toploader": "^1.6.12",
+    "quill": "^2.0.2",
     "react": "^18",
     "react-dom": "^18",
+    "react-quill": "^2.0.0",
     "tailwind-merge": "^2.3.0"
   },
   "devDependencies": {
