--- a/package.json
+++ b/package.json
@@ -9,14 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
-
-    "daisyui": "^4.12.10",
     "axios": "^1.7.2",
+    "daisyui": "^4.12.10",
     "next": "14.2.4",
     "nextjs-toploader": "^1.6.12",
     "quill": "^2.0.2",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.52.1",
     "react-quill": "^2.0.0",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.3.0"
